--- a/src/main/resources/showWorker.html
+++ b/src/main/resources/showWorker.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Workers</h1>
-    <div id="showWorkers"></div>
+<h1>Workers</h1>
+<div id="showWorker"></div>
 </body>
 <script>
-    const workers = document.getElementById("showWorkers");
-    fetch("/api/showWorkers")
+    const workers = document.getElementById("showWorker");
+    fetch("/api/showWorker")
         .then(resp => resp.text())
-        .then(html => showWorkers.innerHTML = html);
+        .then(html => showWorker.innerHTML = html);
 </script>
 </html>
