Multiple refactors, indenting and removing expendable code

--- a/src/main/resources/newWorker.html
+++ b/src/main/resources/newWorker.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Add project worker</h1>
 
-<form method="POST" action="/workers">
+<form method="POST" action="/worker">
     <div><label>First name: <input type="text" name="first_name" /></label></div>
     <div><label>Last name: <input type="text" name="last_name" /></label></div>
     <div><label>Email address: <input type="email" name="email_address" /></label></div>
