--- a/src/main/resources/newWorker.html
+++ b/src/main/resources/newWorker.html
@@ -8,8 +8,9 @@
 <body>
 <h1>Add project worker</h1>
 
-<form method="POST" action="/workers">
-    <div><label>Worker name: <input type="text" name="full_name" /></label></div>
+<form method="POST" action="/worker">
+    <div><label>First name: <input type="text" name="first_name" /></label></div>
+    <div><label>Last name: <input type="text" name="last_name" /></label></div>
     <div><label>Email address: <input type="email" name="email_address" /></label></div>
     <button>Add</button>
 </form>
